syntax = "proto3";

package api.inhouse.v1;

option go_package = "github.com/nokamoto/2pf23/pkg/api/inhouse/v1";

message Flag {
  string name = 1;
  string display_name = 2;
  string value = 3;
  string usage = 4;
}

message Command {
  string package = 1;
  string use = 2;
  string short = 3;
  string long = 4;
  string method = 5;
  repeated Flag string_flags = 6;
}

message Package {
  string package = 1;
  string import_path = 2;
  string use = 3;
  string short = 4;
  string long = 5;
  repeated Command sub_commands = 6;
  repeated Package sub_packages = 7;
}
